# ecommerce_project

./: db.json  db.sqlite3  pyproject.toml  requirements.txt  sqlite_data.json  sqlite_dump.sql
ecommerce_app/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
ecommerce_app/migrations/: 0001_initial.py  0002_alter_contact_created_at_alter_contact_updated_at_and_more.py  0003_alter_contact_created_at_alter_contact_updated_at_and_more.py  0005_alter_cartorderitem_options_and_more.py  0006_alter_contact_created_at_alter_contact_updated_at_and_more.py  0009_cartorder_oid_cartorder_sku_alter_contact_created_at_and_more.py  0010_alter_cartorder_oid_alter_cartorder_sku_and_more.py  0011_coupon_alter_contact_created_at_and_more.py  0012_cartorder_coupons_alter_contact_created_at_and_more.py  0014_alter_cartorder_order_date_alter_contact_created_at_and_more.py  0015_alter_cartorder_order_date_and_more.py  0016_remove_review_email_remove_review_name_and_more.py  0017_alter_cartorder_order_date_alter_contact_created_at_and_more.py  0018_alter_cartorder_order_date_alter_contact_created_at_and_more.py  0019_alter_review_options_alter_cartorder_order_date_and_more.py  0022_alter_cartorderproduct_options_and_more.py  (+1 more)
ecommerce_project/: requirements.txt  settings.py  urls.py
selleradmin/: urls.py  views.py
templates/: base.html  cart-list.html  cart.html  checkout.html  contact.html  contact_us_template.html  create-account.html  index.html  invoice.html  payment_failed.html  search.html  shop.html  wishlist_part.html
userauth/: admin.py  urls.py
(+33 files in other folders)
