[tool.poetry]
name = "ecommerce-project"
version = "0.1.0"
description = ""
authors = ["Olayinka olaleyeolayinka897@gmail.com"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
django = ">=5.1.7,<6.0.0"
dj-database-url = ">=2.3.0,<3.0.0"
django-jazzmin = ">=3.0.1,<4.0.0"
django-paypal = ">=2.1,<3.0"
django-shortuuidfield = ">=0.1.3,<0.2.0"
gunicorn = ">=23.0.0,<24.0.0"
pillow = ">=11.1.0,<12.0.0"
psycopg = ">=3.2.6,<4.0.0"
python-decouple = ">=3.8,<4.0"
shortuuid = ">=1.0.13,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
